--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -11,8 +11,8 @@
 	<div id="newpost">
 		<form method="post" action="">
 			<textarea name="post"></textarea><br>
-			<label>Tags: <input type="text" name="tags" placeholder="tags,sperated,by,comma"></label><br>
-			<input type="submit" value="postit">
+			<label>Tags: <input type="text" name="tags" placeholder="{{tagsplaceholder}}"></label><br>
+			<input type="submit" value="{{postbtn}}">
 		</form>
 	</div>
 	<ul class="tags">
@@ -20,13 +20,19 @@
 	</ul>
 	<div id="postlist">
 		<ul id="yearlist">{{yearlist}}
-			<li><a href="index.php">clear</a></li>
+			<li><a href="index.php">{{clearbtn}}</a></li>
 		</ul>
 		
 		<div id="posts">
 			{{postlist}}
 		</div>
 	</div>
-
+	<div id="controls">
+		<a href="goaway.php">I am out</a><br>
+		<form method="get" action="search.php">
+			<input type="text" name="text" placeholder="{{textplaceholder}}"><br>
+			<input type="submit" value="{{searchbtn}}">
+		</form>
+	</div>
 </body>
 </html>
